# reading_recs

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  feeds.opml  feeds.txt  pyproject.toml
.github/workflows/: add-feed.yml  deploy-worker.yml  digest.yml
data/: reading_recs.db
examples/: favorites.md
reading_recs/: __main__.py  config.py  db.py  email_digest.py  embed.py  feedback.py  fetch.py  main.py  models.py  popularity.py  score.py
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.js
